# voice2text

./: .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  playbook.yml  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
src/: app.py  main.py  send.py
src/handlers/: audio_processing.py  audio_vosk.py  message_handler.py  socket_communication.py  utils.py
src/logger/: logger.py
src/rabbitmq/: connection.py  publisher.py
