[project]
name = "pythonbooks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "cfgv==3.4.0",
    "distlib==0.3.9",
    "django==5.2.1",
    "filelock==3.18.0",
    "identify==2.6.10",
    "nodeenv==1.9.1",
    "platformdirs==4.3.8",
    "pre-commit==4.2.0",
    "pyyaml==6.0.2",
    "ruff==0.11.10",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "virtualenv==20.31.2",
    "django-extensions==4.1",
    "psycopg2-binary>=2.9.10",
    "sorl-thumbnail==12.11.0",
    "python-dotenv>=1.0.0",
]