[project]
name = "pythonbooks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.1.0",
    "aio-pika==9.5.1",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.11.7",
    "aiormq==6.8.1",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==4.3.0",
    "astunparse==1.6.3",
    "attrs==24.2.0",
    "audioread==3.0.1",
    "certifi==2024.2.2",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "decorator==5.1.1",
    "dnspython==2.6.1",
    "email_validator==2.1.1",
    "exceptiongroup==1.2.2",
    "fastapi==0.111.0",
    "fastapi-cli==0.0.4",
    "ffmpeg-python==0.2.0",
    "filelock==3.17.0",
    "flatbuffers==25.1.24",
    "fonttools==4.55.6",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "future==1.0.0",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.70.0",
    "h11==0.14.0",
    "h5py==3.12.1",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "huggingface-hub==0.27.1",
    "idna==3.7",
    "iniconfig==2.0.0",
    "Jinja2==3.1.4",
    "joblib==1.4.2",
    "kiwisolver==1.4.8",
    "lazy_loader==0.4",
    "libclang==18.1.1",
    "librosa==0.10.2.post1",
    "llvmlite==0.42.0",
    "loguru==0.7.2",
    "Markdown==3.7",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "matplotlib==3.10.0",
    "mdurl==0.1.2",
    "ml-dtypes==0.4.1",
    "msgpack==1.0.8",
    "multidict==6.1.0",
    "namex==0.0.8",
    "noisereduce==3.0.3",
    "numba==0.59.1",
    "numpy==1.26.4",
    "opt_einsum==3.4.0",
    "optree==0.14.0",
    "orjson==3.10.3",
    "packaging==24.0",
    "pamqp==3.3.0",
    "pika==1.3.2",
    "pillow==11.1.0",
    "platformdirs==4.2.2",
    "pluggy==1.5.0",
    "pooch==1.8.1",
    "propcache==0.2.0",
    "protobuf==5.29.3",
    "PyAudio==0.2.14",
    "pycparser==2.22",
    "pydantic==2.7.1",
    "pydantic_core==2.18.2",
    "pydub==0.25.1",
    "Pygments==2.18.0",
    "pyparsing==3.2.1",
    "pyspellchecker==0.8.2",
    "pytest==8.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "python_speech_features==0.6",
    "PyYAML==6.0.1",
    "regex==2024.11.6",
    "requests==2.31.0",
    "rich==13.7.1",
    "safetensors==0.5.2",
    "scikit-learn==1.5.0",
    "scipy==1.13.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soundfile==0.12.1",
    "sox==1.5.0",
    "soxr==0.3.7",
    "srt==3.5.3",
    "starlette==0.37.2",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tensorflow==2.18.0",
    "termcolor==2.5.0",
    "tf_keras==2.18.0",
    "threadpoolctl==3.5.0",
    "tokenizers==0.21.0",
    "tqdm==4.66.4",
    "typer==0.12.3",
    "typing_extensions==4.11.0",
    "ujson==5.10.0",
    "urllib3==2.2.1",
    "uvicorn==0.29.0",
    "vosk==0.3.45",
    "watchfiles==0.21.0",
    "websockets==12.0",
    "Werkzeug==3.1.3",
    "win32-setctime==1.1.0",
    "wrapt==1.17.2",
    "yarl==1.18.0",
    "ruff==0.11.10",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "virtualenv==20.31.2",
    "psycopg2-binary>=2.9.10",
    "sorl-thumbnail==12.11.0",
    "python-dotenv>=1.0.0",
]